[metadata]
name = laplace-experiments
version = 0.1
author = Runa Eschenhagen
url = https://github.com/runame/laplace-experiments
project_urls =
    Bug Tracker = https://github.com/runame/laplace-experiments/issues
description = Experiments for the paper Laplace Redux - Effortless Bayesian Deep Learning
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
packages = find:
include_package_data = True
setup_requires =
  setuptools_scm
# Dependencies of the project (semicolon/line-separated):
install_requires =
    torch
    torchvision
    torchaudio
    torchtext
    laplace-torch
    scikit-learn
    tqdm
    PyYAML
    pycalib
    lmdb==1.2.1
# Require a specific Python version, e.g. Python 2.7 or >= 3.4
python_requires = >=3.8
